# air-cargo-booking

./: .gitignore  README.md
backend/: README.md  check_token.py  debug_otel.py  fix_token.py  main.py  pyproject.toml  requirements.txt  restore_token.py  traffic_gen.py
backend/db/: init.sql  migration_01_add_user_id.md
backend/tests/: README.md  test_main.py
frontend/: README.md  package-lock.json  package.json  proxy.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/auth/[...nextauth]/: route.ts
frontend/app/booking/: page.tsx
frontend/app/login/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/search/: page.tsx
frontend/app/signup/: page.tsx
frontend/app/tracking/: page.tsx
frontend/components/: AntdRegistry.tsx  AuthProvider.tsx  BookingForm.tsx  FlightSearch.tsx  MainLayout.tsx  ThemeContext.tsx  ThemeToggle.tsx  TrackingTimeline.tsx  UserAvatar.tsx
frontend/types/: next-auth.d.ts
